Adding Google Apps Script types

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/lczapparolli/habitica-notion-integration#readme",
   "devDependencies": {
     "@google/clasp": "^2.4.1"
+  },
+  "dependencies": {
+    "@types/google-apps-script": "^1.0.53"
   }
 }
