--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/lczapparolli/habitica-notion-integration#readme",
   "devDependencies": {
-    "@google/clasp": "^2.4.1"
+    "@google/clasp": "^2.4.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/google-apps-script": "^1.0.53"
