--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Script to integrate Habitica and Notion syncing tasks and dailies",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,9 @@
   "homepage": "https://github.com/lczapparolli/habitica-notion-integration#readme",
   "devDependencies": {
     "@google/clasp": "^2.4.1",
+    "@types/jest": "^28.1.8",
+    "jest": "^29.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
