--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "homepage": "https://github.com/lczapparolli/habitica-notion-integration#readme",
   "devDependencies": {
     "@google/clasp": "^2.4.1",
-    "@types/jest": "^28.1.8",
-    "jest": "^29.0.0",
+    "jest": "^28.1.3",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
